Service polishing